# moss

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bun.nix  flake.nix  package.json
.github/workflows/: build.yml  update.yml
bench/: .gitignore  plot_parser_results.py
bench/java/: ParserBench.java
crates/connie/: Cargo.toml
crates/connie-cli/: Cargo.toml
crates/connie-cli/src/: lib.rs  util.rs
crates/connie-dev/: Cargo.toml
crates/connie/src/: context.rs  intern.rs  lex.rs  lib.rs  lower.rs  parse.rs  prelude.rs  range.rs  subsets.rs  tuples.rs  util.rs  wasm.rs
crates/lexwat-test/: Cargo.toml  README.md  build.rs  driver.wat  driver2.wat  lex.wat  lex_brtable.wat  lex_nomem.wat  lex_nomem_brtable.wat  lex_selfsource.wat  wasm2c_bench.c
crates/lexwat-test/src/: lib.rs
crates/lexwat-test/tests/: bench.rs  equivalence.rs
crates/moss-cli/: Cargo.toml  build.rs
crates/moss-cli/src/: binaryen.rs  lib.rs  lsp.rs  wasmtime_ffi.rs
crates/moss-core/: Cargo.toml
crates/moss-core/src/: context.rs  dump.rs  intern.rs  lex.rs  lib.rs  lower.rs  native.rs  parse.rs  parse_naive.rs  prelude.rs  range.rs  tuples.rs  util.rs  wasm.rs
crates/moss-dev/: Cargo.toml
docs/: README.md
docs/comparison/: README.md
docs/implementation/: README.md  backend.md  lowering.md  questions.md  testing.md
docs/learn/: README.md  hello.md
docs/reference/: README.md  context.md  literals.md  scoping.md  syntax.md
examples/: args.con  args.moss  context.con  context.moss  escape.con  escape.moss  fizzbuzz.moss  hello.con  hello.moss  instances.moss  multimemory.moss  params.con  params.moss  quine.moss  reassign.moss  rebind.con  rebind.moss  true.moss  unchecked.moss
lib/: bool.moss  char.moss  int.moss  int32.moss  int64.moss  io.moss  literal.moss  ops.moss  prelude.con  prelude.moss  std.moss  string.moss  this.moss  types.moss  wasi.con  wasi.moss  wasip1.con  wasip1.moss  wasm.con  wasm.moss
scripts/ir-viewer/: server.ts
scripts/ir-viewer/web/: index.html  main.js  style.css
src/: cell.moss  cli.moss  inner.moss  lex.moss  lower.moss  main.moss  option.moss  parse.moss  prelude.moss  range.moss  std.moss  token.moss  wasip1.moss  wasm.moss
tests/errors/: arg_count_mismatch.con  empty.con  multiline_string.moss  no_body.con  no_main.con  overflow.moss  stray_colon.moss  this_not_method.moss  unclosed_string.con  undefined.con
tests/examples/stdout/: args.txt  escape.txt  quine.txt  rebind.txt  true.txt
tests/questions/: README.md  alias_transparency.moss  literal_target_type.moss  overlapping_providers.moss
