[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = "4"
crossbeam-channel = "0.5"
enumset = "1"
im-rc = "15"
index_vec = "0.1"
indexmap = "2"
itertools = "0.14"
line-index = "0.1"
logos = "0.15"
lsp-server = "0.7"
lsp-types = "0.97"
moss-core = { path = "crates/moss-core" }
serde_json = "1"
strum = "0.27"
wasm-encoder = "0.241"
tempfile = "3"
llvm-sys = { version = "201", features = ["prefer-static"], default-features = false }
wasmtime = { version = "39", default-features = false, features = [
    "async",
    "cache",
    "gc",
    "gc-drc",
    "gc-null",
    "wat",
    "parallel-compilation",
    "cranelift",
    "pooling-allocator",
    "demangle",
    "addr2line",
    "coredump",
    "debug-builtins",
    "runtime",
    "component-model",
    "component-model-async",
    "threads",
    "stack-switching",
    "compile-time-builtins",
    "std",
], package = "wasmtime" }
wasmtime-wasi = "39"

[profile.release-with-debug]
inherits = "release"
debug = true
