[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = "4"
crossbeam-channel = "0.5"
enumset = "1"
index_vec = "0.1"
indexmap = "2"
itertools = "0.14"
line-index = "0.1"
logos = "0.16"
lsp-server = "0.7"
lsp-types = "0.97"
moss-core = { path = "crates/moss-core" }
serde_json = "1"
strum = "0.28"
wasm-encoder = "0.251"
wasmtime = "45"
wasmtime-wasi = "45"

[profile.release-with-debug]
inherits = "release"
debug = true
