[package]
name = "connie-cli"
version.workspace = true
edition.workspace = true
default-run = "connie"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
connie = { workspace = true }
crossbeam-channel = { workspace = true }
line-index = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
