[package]
name = "connie-dev"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
connie = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
line-index = { workspace = true }
