[package]
name = "connie"
version.workspace = true
edition.workspace = true

[dependencies]
enumset = { workspace = true }
index_vec = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
logos = { workspace = true }
strum = { workspace = true, features = ["derive"] }
wasm-encoder = { workspace = true }
