[package]
name = "moss-cli"
version.workspace = true
edition.workspace = true
default-run = "moss"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
index_vec = { workspace = true }
line-index = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
moss-core = { workspace = true }
serde_json = { workspace = true }
