[package]
name = "moss-core"
version.workspace = true
edition.workspace = true

[dependencies]
enumset = { workspace = true }
im-rc = { workspace = true }
index_vec = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
line-index = { workspace = true }
logos = { workspace = true }
strum = { workspace = true, features = ["derive"] }
wasm-encoder = { workspace = true }
llvm-sys = { workspace = true }
