[package]
name = "moss-dev"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
moss-core = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
line-index = { workspace = true }
